Refactor and enhance core controllers, DAOs, services, mappers, and utility classes